# Lumical

./: .gitignore  CLAUDE.md  README.md  led_calibration.json  pyproject.toml
firmware/: README.md  boot.py  config.py  main.py
led_strip_calibrator/: __init__.py  __main__.py  centroid.py  interactive.py  led_calibration_data.py  logger.py  process.py
led_strip_calibrator/static/css/: lumical.css
led_strip_calibrator/static/js/: canvas_controller.js
led_strip_calibrator/templates/: drawing.html  sign.html
tests/: test_centroid.py  test_sample_image.py
