[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "led_strip_calibrator"
version = "0.1.0"
description = "Tool for calibrating the 2D coordinates of individually addressable LED strips"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "ruff>=0.11.11",
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
